# Yaksok

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  CONVENTIONS.md  HANDOFF.md  LOG.md  PLAN.md  README.md  railway.toml
.claude/: launch.json
backend/: .env.example  main.py  pyproject.toml  pytest.ini  requirements.txt  run.py
backend/alembic/versions/: 0001_initial_tables.py
backend/app/: main.py
backend/apps/auth/tests/: conftest.py
backend/apps/guidance/adapter/outbound/: fake_conversation_repository.py  fake_llm_adapter.py  gemini_llm_adapter.py
backend/apps/guidance/adapter/outbound/orm/: __init__.py  models.py
backend/apps/guidance/adapter/outbound/repositories/: __init__.py  conversation_repository.py
backend/apps/guidance/app/: prompt.py
backend/apps/guidance/app/dtos/: __init__.py  guidance_dto.py
backend/apps/guidance/app/ports/output/: __init__.py  conversation_repository_port.py  llm_port.py
backend/apps/guidance/app/use_cases/: __init__.py  ask_guidance.py
backend/apps/guidance/dependencies/: __init__.py
backend/apps/guidance/domain/entities/: __init__.py  conversation.py
backend/apps/guidance/tests/: conftest.py
backend/apps/guidance/tests/adapter/: test_guidance_api.py
backend/apps/guidance/tests/app/: test_ask_guidance.py  test_prompt.py
backend/apps/pill/adapter/outbound/: fake_matching_adapter.py  fake_vision_adapter.py  gemini_vision_adapter.py
backend/apps/pill/adapter/outbound/mappers/: pill_mapper.py
backend/apps/pill/adapter/outbound/orm/: pill_orm.py
backend/apps/pill/app/dtos/: identify.py  pill_dto.py
backend/apps/pill/app/use_cases/: identify_pill.py  match_candidates.py  search_pills.py
backend/apps/pill/dependencies/: __init__.py  repository.py  use_cases.py  vision.py
backend/apps/pill/domain/entities/: pill.py
backend/apps/pill/domain/value_objects/: pill_attributes.py
backend/apps/pill/tests/: conftest.py  test_smoke.py
backend/apps/pill/tests/adapter/: test_dictionary_api.py  test_gemini_vision_parser.py  test_identify_api.py
backend/apps/pill/tests/app/: test_identify_use_case.py  test_match_candidates.py
backend/core/: config.py  db.py  gemini.py
backend/migrations/: env.py
backend/migrations/versions/: 0001_initial_tables.py
backend/scripts/: fetch_drug_info.py  fetch_pills.py
(+67 files in other folders)
